# otus-04-vge

./: .gitignore  CMakeLists.txt  README.md  controller.cpp  controller.hpp  file.cpp  file.hpp  gui.cpp  gui.hpp  main.cpp  model.cpp  model.hpp  view.cpp  view.hpp
.github/workflows/: main.yml
docs/: Doxyfile  index.html
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classvge__controller_1_1_main_window-members.html  classvge__controller_1_1_main_window.html  classvge__controller_1_1_main_window__inherit__graph.map  classvge__controller_1_1_main_window__inherit__graph.md5  classvge__gui_1_1_button-members.html  classvge__gui_1_1_button.html  classvge__gui_1_1_button__coll__graph.map  classvge__gui_1_1_button__coll__graph.md5  classvge__gui_1_1_object-members.html  classvge__gui_1_1_object.html  classvge__gui_1_1_object__inherit__graph.map  classvge__gui_1_1_object__inherit__graph.md5  classvge__gui_1_1_widget-members.html  classvge__gui_1_1_widget.html  classvge__gui_1_1_widget__coll__graph.map  classvge__gui_1_1_widget__coll__graph.md5  classvge__gui_1_1_widget__inherit__graph.map  classvge__gui_1_1_widget__inherit__graph.md5  classvge__gui_1_1_window-members.html  classvge__gui_1_1_window.html  classvge__gui_1_1_window__coll__graph.map  classvge__gui_1_1_window__coll__graph.md5  classvge__gui_1_1_window__inherit__graph.map  classvge__gui_1_1_window__inherit__graph.md5  classvge__model_1_1_line-members.html  classvge__model_1_1_line.html  classvge__model_1_1_line__coll__graph.map  classvge__model_1_1_line__inherit__graph.md5  (+105 more)
(+52 files in other folders)
